style: fix exerciseItem width and spacing

--- a/src/pages/Exercises/components/ExerciseItem.module.css
+++ b/src/pages/Exercises/components/ExerciseItem.module.css
@@ -8,6 +8,8 @@
   color: white;
   border-radius: 1rem;
   transition: 0.3s ease;
+  width: 100%;
+  margin-bottom: 0.8rem;
 }
 
 .exercise-item-wrapper:hover {
